# lang-sms

./: .glottologid.txt  :0  AUTHORS  CITATION.cff  LICENCE  Links.md  Makefile.in  README  README.markdown  README.md  SkoltSamiKeyboards.jspwiki  _config.yml  abbreviations-stems-fst-src.md  acronyms-affixes-fst-src.md  adjectives-affixes-fst-src.md  adjectives-stems.md  adjectives_newwords-stems-fst-src.md  adpositions-stems-fst-src.md  adpositions-stems.jspwiki  adpositions_newwords-stems-fst-src.md  adpositions_newwords-stems.md  adverbs-affixes-fst-src.md  adverbs-affixes.md  adverbs-stems.md  adverbs_newwords-stems-fst-src.md  adverbs_newwords-stems.md  autogen.sh  configure.ac  conjunctions_newwords-stems-fst-src.md  conjunctions_newwords-stems.md  disambiguator-cg3-src.md  docu-sms-background.xml  docu-sms-lex.xml  docu-sms-twol.xml  docu-sms-xfst.xml  exceptions-stems-fst-src.md  giella-sms.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  (+121 more)
doc/: KaikkiGeneroidutParadigmat.jspwiki  Links.jspwiki  Makefile.am  SkoltSamiKeyboards.jspwiki  WhatIsThis.jspwiki  adjectives-affixes.jspwiki  adjectives-stems.jspwiki  adpositions-stems.jspwiki  adverbs-stems.jspwiki  conjunctions-stems.jspwiki  docu-sms-background.xml  docu-sms-lex.xml  docu-sms-twol.xml  docu-sms-xfst.xml  index.xml  interjections-stems.jspwiki  j-sms.xml  nouns-affixes.jspwiki  nouns-stems.jspwiki  numerals-stems.jspwiki  paradigm_standard.sms.txt  particles-stems.jspwiki  phonology-morphology.jspwiki  preamble.jspwiki  pronouns-stems.jspwiki  propernouns-affixes.jspwiki  punctuation-stems.jspwiki  root-morphology.jspwiki  sms-phon-phonology.jspwiki  sms-propernouns-stems.jspwiki  sms.jspwiki  subjunctions-stems.jspwiki  verbs-affixes.jspwiki  verbs-stems.jspwiki
doc/data/: 1-2-syll_no-pal-CC.txt  1-2-syll_pal-XYY2XY.csv  Contlex-V-CaronAd.pl  word-initial-cons.regex  word-initial-consVowsAndCons.regex
doc/meetings/: 130826.jspwiki
doc/testit/: TestiAAttr.xml
docs/: KaikkiGeneroidutParadigmat.jspwiki  Links.md  Makefile.am  SkoltSamiKeyboards.jspwiki  _config.yml  adjectives-affixes.md  conjunctions-stems.md  disambiguator-syntax.md  index-header.md  index.md  language-map.md  link-header.jspwiki  link-header.md  nouns-affixes.md  nouns-stems.jspwiki  nouns-stems.md  numerals-stems.md  particles-stems.jspwiki  particles-stems.md  phonology-morphology.md  preamble.jspwiki  pronouns-stems.jspwiki  pronouns-stems.md  propernouns-affixes.md  report.json  root-morphology.md  site.xml  sms-propernouns-stems.md  sms.md  spell-tests.tsv  spellersuggs.json  tabs.xml  typossize.json  verbs-affixes.md  verbs-stems.jspwiki
docs/badgedata/: fst-lemmacount.json  speller-suggestions.json  speller-version.json
docs/data/: 1-2-syll_no-pal-KK2GG.csv  1-2-syll_no-pal-XYY2XY.csv  1-2-syll_pal-CC.txt  1-2-syll_pal-KK2GG.csv  consonantsInFirstCodaOfVerbs.txt  word-initial-cons.regex  word-initial-consAndVows.regex
docs/meetings/: 130826.jspwiki  meeting_21112009.md
docs/typosreport/: report.json
sms/tools/spellcheckers/: Makefile.am
src/fst/: Makefile.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/affixes/: #verbs.lexc#  .#verbs.lexc  acronyms.lexc  adjectives.lexc  adverbs.lexc  nouns.lexc  numerals.lexc  pronouns.lexc  propernouns.lexc  smi-propernouns.lexc  verbs.lexc
src/fst/filters/: Makefile.am  remove-modifier-letter-vertical-line.regex
src/fst/incoming/: ALL_sms2deu-lr-trie.xml  Output-smsLexClips.xml  PS2010-sms-wordlist.xml  missing050421.txt  sms_AlguSrcPgNosDefsEtc.xml
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/orthography/: inituppercase.regex  spellrelax.regex
src/fst/stems/: ABBR_sms2x.lexc  ABBR_sms2x.xml  ACRO_sms2x.lexc  ACRO_sms2x.xml  A_sms2x.lexc  A_sms2x.xml  Adp_sms2x.lexc  Adp_sms2x.xml  Adv_sms2x.lexc  Adv_sms2x.xml  CC_sms2x.lexc  CC_sms2x.xml  CS_sms2x.lexc  CS_sms2x.xml  Der_sms2x.xml  Det_sms2x.lexc  Det_sms2x.xml  ITRAB_sms2x.lexc  ITRAB_sms2x.xml  Interj_sms2x.lexc  Interj_sms2x.xml  MWE_sms2x.xml  N_Kin_sms2x.lexc  N_Kin_sms2x.xml  N_Prop_Toponyms_sms2x.lexc  N_Prop_Toponyms_sms2x.xml  N_Prop_sms2x.lexc  N_Prop_sms2x.xml  N_sms2x.lexc  Num_sms2x.lexc  Num_sms2x.xml  Pcle_sms2x.lexc  Pcle_sms2x.xml  Prefix_sms2x.lexc  Prefix_sms2x.xml  Pron_references_sms2x.xml  Pron_sms2x.lexc  Pron_sms2x.xml  Suf_sms2x.xml  TRAB_sms2x.lexc  (+32 more)
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc  transcriptor-symbols2text.lexc  transcriptor-ttsdate-digit2text.lexc
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  root.lexc  tags.yaml
src/morphology/affixes/: adjectives.lexc  adverbs.lexc  nouns.lexc  pronouns.lexc  propernouns.lexc  smi-propernouns.lexc  verbs.lexc
src/morphology/incoming/: 00README.txt  ALL_fin2sms-lr-trie.xml  ALL_sms2rus-lr-trie.xml  Compg_sms.xlsx  insertion-of-1VOW-wildcard-according-to-contlex.pl  komparatiivit_2016-03-01.xlsx  m-partisiipit_2016-03-01.xlsx  missing-termwiki+words_dicts.txt  missing2018-08-16.txt  sms_AlguSrcPgNosDefsEtc.xml  tem-karitiivit_2016-03-01.xlsx
src/morphology/stems/: 00_readme.txt  ABBR_sms2x.lexc  ABBR_sms2x.xml  A_sms2x.lexc  A_sms2x.xml  Adp_sms2x.lexc  Adp_sms2x.xml  Adv_sms2x.lexc  Adv_sms2x.xml  CC_sms2x.lexc  CC_sms2x.xml  CS_sms2x.lexc  CS_sms2x.xml  Der_sms2x.xml  Det_sms2x.lexc  Det_sms2x.xml  ITRAB_sms2x.lexc  ITRAB_sms2x.xml  Interj_sms2x.lexc  Interj_sms2x.xml  MWE_sms2x.xml  N_Kin_sms2x.lexc  N_Kin_sms2x.xml  N_Prop_Toponyms_sms2x.lexc  N_Prop_Toponyms_sms2x.xml  N_Prop_sms2x.lexc  N_Prop_sms2x.xml  N_sms2x.lexc  N_sms2x.xml  Num_sms2x.lexc  Num_sms2x.xml  Pcle_sms2x.lexc  Pcle_sms2x.xml  Prefix_sms2x.lexc  Suf_sms2x.xml  (+51 more)
tools/spellcheckers/: Makefile.am  Makefile.mod-desktop.am  Makefile.mod-fstbased.am  Makefile.mod-mobile-hfst.am  Makefile.mod-spellcheckers.am  editdist.default.txt  errmodel.ocr.regex  final_strings.default.txt  index.xml  strings.default.txt
(+949 files in other folders)
