## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki \
		  adjectives-affixes.jspwiki       \
		  adjectives-stems.jspwiki         \
		  adpositions-stems.jspwiki        \
		  adverbs-stems.jspwiki            \
		  conjunctions-stems.jspwiki \
		  interjections-stems.jspwiki \
		  nouns-affixes.jspwiki \
		  nouns-stems.jspwiki \
		  numerals-stems.jspwiki           \
		  particles-stems.jspwiki \
		  pronouns-stems.jspwiki \
		  propernouns-affixes.jspwiki      \
		  punctuation-stems.jspwiki        \
		  sms-propernouns-stems.jspwiki        \
		  subjunctions-stems.jspwiki       \
		  verbs-affixes.jspwiki \
		  verbs-stems.jspwiki \
		  phonology-morphology.jspwiki
# clitics-morphology.jspwiki       \
# compounding-morphology.jspwiki   \
# abbreviations-stems.jspwiki      \
# acronyms-stems.jspwiki           \
# smi-propernouns-stems.jspwiki    \
include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
